Sat Dec 27 00:43:42 2003  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (ParseEnumDeclaration): 
	* gtkdoc-mktmpl.in (ParseEnumDeclaration): Support a trailing ,
	in enum declarations. These are a GNU C extension, but also 
	blessed by C99.  (#129949, Thomas Vander Stichele)

Sun Nov 16 00:29:03 2003  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-scangobj.in: Don't use g_strdown(). (#127028, 
	David Schleef)

Sun Nov 16 00:26:05 2003  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-scangobj.in: If compiled against GLib >= 2.3.0, look
	for properties on interfaces.  (#127068, James M. Cape)

2003-11-03  Dan Winship  <danw@ximian.com>

	* gtkdoc-scangobj.in: Clean up $MODULE-scan.o even when using
	libtool

	* gtkdoc-scanobj.in: Likewise

	* gtk-doc.make (CLEANFILES): Remove $(MODULE)-scan.o from here
	(clean-local): rm -rf .libs
	
Wed Oct  8 01:21:54 2003  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-scan.in (ScanHeader): Make gtkdoc-scan grok 
	typedef struct { } foo; in addition to the more baroque
	typedef struct _foo foo; struct _foo { };
	(#116807, Malcolm Tredinnick)

Wed Oct  8 01:21:35 2003  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (OutputParamDescriptions): Remove a pointless 
	warning.

2003-10-01  Matthias Clasen  <maclas@gmx.de>

	Make signals and properties end up in the right template 
	file (#116569, Owen Taylor):

	* gtkdoc-mktmpl.in (OutputSignalTemplates): 
	(OutputArgTemplates): Return a string rather than directly 
	writing to OUTPUT. 
	(OutputTemplateFile): Don't interpret $title as the name of 
	the object to print signal and property templates for.
	(UpdateTemplates): Collect signal and property templates for all
	objects contained in the section.

2003-08-10  James Henstridge  <james@daa.com.au>

	* acinclude.m4 (JH_PATH_XML_CATALOG): allow caller to specify
	actions if found or not found.
	(JH_CHECK_XML_CATALOG): when requiring JH_PATH_XML_CATALOG, don't
	error out if it is not found.

2003-08-03  Matthias Clasen  <maclas@gmx.de>
