@@ -36,17 +36,35 @@ my $MODULE_DIR;
 my $HTML_DIR = "";
 my @EXTRA_DIRS;
 my $PRINT_VERSION;
+my $PRINT_HELP;
 
 my %optctl = (module => \$MODULE,
 	      'module-dir' => \$MODULE_DIR,
 	      'html-dir' => \$HTML_DIR,
 	      'extra-dir' => \@EXTRA_DIRS,
-	      'version' => \$PRINT_VERSION);
+	      'version' => \$PRINT_VERSION,
+	      'help' => \$PRINT_HELP);
 GetOptions(\%optctl, "module=s", "module-dir=s", "html-dir=s", "extra-dir=s@",
-	"version");
+	"version", "help");
 
 if ($PRINT_VERSION) {
     print "@VERSION@\n";
+    exit 0;
+}
+
+if (!$MODULE) {
+    $PRINT_HELP = 1;
+}
+
+if ($PRINT_HELP) {
+    print "gtkdoc-fixxref version @VERSION@\n";
+    print "\n--module=MODULE_NAME    Name of the doc module being parsed";
+    print "\n--module-dir=MODULE_DIR The directory which contains the generated HTML";
+    print "\n--html-dir=HTML_DIR     The directory where gtk-doc generated documentation is installed";
+    print "\n--extra-dir=EXTRA_DIR   Directories to scan for indices in addition to HTML_DIR";
+    print "\n                        May be used more than once for multiple directories";
+    print "\n--version               Print the version of this program";
+    print "\n--help                  Print this help\n";
     exit 0;
 }
 
