@@ -39,6 +39,7 @@ require "gtkdoc-common.pl";
 my $MODULE;
 my $OUTPUT_DIR;
 my $PRINT_VERSION;
+my $PRINT_HELP;
 my $TYPE_INIT_FUNC="g_type_init ()";
 
 # --nogtkinit is deprecated, as it is the default now anyway.
@@ -47,9 +48,10 @@ my $TYPE_INIT_FUNC="g_type_init ()";
 	   nogtkinit => \$NO_GTK_INIT,
 	   'type-init-func' => \$TYPE_INIT_FUNC,
 	   'output-dir' => \$OUTPUT_DIR,
-	   version => \$PRINT_VERSION);
+	   'version' => \$PRINT_VERSION,
+	   'help' => \$PRINT_HELP);
 	   
-GetOptions(\%optctl, "module=s", "types:s", "output-dir:s", "nogtkinit", "type-init-func:s", "version");
+GetOptions(\%optctl, "module=s", "types:s", "output-dir:s", "nogtkinit", "type-init-func:s", "version", "help");
 
 if ($NO_GTK_INIT) {
   # Do nothing. This just avoids a warning.
@@ -57,6 +59,21 @@ if ($NO_GTK_INIT) {
 
 if ($PRINT_VERSION) {
     print "@VERSION@\n";
+    exit 0;
+}
+
+if (!$MODULE) {
+    $PRINT_HELP = 1;
+}
+
+if ($PRINT_HELP) {
+    print "gtkdoc-scangobj version @VERSION@\n";
+    print "\n--module=MODULE_NAME  Name of the doc module being parsed";
+    print "\n--types=FILE          The name of the file to store the types in";
+    print "\n--type-init-func=FUNC The init function to call instead of g_type_init ()";
+    print "\n--output-dir=DIRNAME  The directory where the results are stored";
+    print "\n--version             Print the version of this program";
+    print "\n--help                Print this help\n";
     exit 0;
 }
 
