@@ -1,3 +1,10 @@
+Sat Dec 27 01:36:08 2003  Matthias Clasen  <maclas@gmx.de>
+
+	* gtkdoc-scangobj.in: 
+	* gtkdoc-mktmpl.in: 
+	* gtkdoc-scan.in: 
+	* gtkdoc-fixxref.in: Add --help.  (#126915)
+
 Sat Dec 27 00:43:42 2003  Matthias Clasen  <maclas@gmx.de>
 
 	* gtkdoc-mkdb.in (ParseEnumDeclaration): 
